make sure manual finder button isnt wrapped onto same line as searchbar

--- a/src/component-library/core-components/AddressFinder/AddressFinder.module.scss
+++ b/src/component-library/core-components/AddressFinder/AddressFinder.module.scss
@@ -4,6 +4,7 @@
 
 .wrapper {
   position: relative;
+  flex-direction: column;
 
   .cross {
     display: flex;
